@@ -28,59 +28,30 @@ public class AllRandomFlameGenerator extends RandomFlameGenerator {
 
   static {
     allGenerators = new ArrayList<RandomFlameGenerator>();
-    allGenerators.add(new BubblesRandomFlameGenerator());
-    allGenerators.add(new Gnarl3DRandomFlameGenerator());
-    allGenerators.add(new LinearRandomFlameGenerator());
-    allGenerators.add(new FilledFlowers3DRandomFlameGenerator());
-    allGenerators.add(new SimpleRandomFlameGenerator());
-    allGenerators.add(new SphericalRandomFlameGenerator());
-    allGenerators.add(new Gnarl3DRandomFlameGenerator());
-    allGenerators.add(new DuckiesRandomFlameGenerator());
-    allGenerators.add(new Spherical3DRandomFlameGenerator());
     allGenerators.add(new BrokatRandomFlameGenerator());
-    allGenerators.add(new MandelbrotRandomFlameGenerator());
-    allGenerators.add(new LayerzRandomFlameGenerator());
-    allGenerators.add(new GnarlRandomFlameGenerator());
-    allGenerators.add(new Spherical3DRandomFlameGenerator());
+    allGenerators.add(new Brokat3DRandomFlameGenerator());
     allGenerators.add(new BubblesRandomFlameGenerator());
-    allGenerators.add(new ExperimentalGnarlRandomFlameGenerator());
-    allGenerators.add(new BubblesRandomFlameGenerator());
-    allGenerators.add(new DuckiesRandomFlameGenerator());
-    allGenerators.add(new Spherical3DRandomFlameGenerator());
-    allGenerators.add(new BrokatRandomFlameGenerator());
-    allGenerators.add(new SubFlameRandomFlameGenerator());
-    allGenerators.add(new LayerzRandomFlameGenerator());
-    allGenerators.add(new LinearRandomFlameGenerator());
-    allGenerators.add(new DuckiesRandomFlameGenerator());
-    allGenerators.add(new GnarlRandomFlameGenerator());
-    allGenerators.add(new Gnarl3DRandomFlameGenerator());
     allGenerators.add(new Bubbles3DRandomFlameGenerator());
-    allGenerators.add(new SphericalRandomFlameGenerator());
     allGenerators.add(new DuckiesRandomFlameGenerator());
-    allGenerators.add(new SimpleTilingRandomFlameGenerator());
-    allGenerators.add(new DuckiesRandomFlameGenerator());
-    allGenerators.add(new SplitsRandomFlameGenerator());
-    allGenerators.add(new Brokat3DRandomFlameGenerator());
-    allGenerators.add(new BubblesRandomFlameGenerator());
-    allGenerators.add(new GnarlRandomFlameGenerator());
-    allGenerators.add(new SierpinskyRandomFlameGenerator());
-    allGenerators.add(new LayerzRandomFlameGenerator());
-    allGenerators.add(new Flowers3DRandomFlameGenerator());
-    allGenerators.add(new Gnarl3DRandomFlameGenerator());
-    allGenerators.add(new FilledFlowers3DRandomFlameGenerator());
     allGenerators.add(new ExperimentalBubbles3DRandomFlameGenerator());
-    allGenerators.add(new Spherical3DRandomFlameGenerator());
-    allGenerators.add(new Brokat3DRandomFlameGenerator());
-    allGenerators.add(new SubFlameRandomFlameGenerator());
-    allGenerators.add(new DuckiesRandomFlameGenerator());
-    allGenerators.add(new JulianDiscRandomFlameGenerator());
-    allGenerators.add(new DuckiesRandomFlameGenerator());
-    allGenerators.add(new LayerzRandomFlameGenerator());
-    allGenerators.add(new BrokatRandomFlameGenerator());
-    allGenerators.add(new SimpleTilingRandomFlameGenerator());
-    allGenerators.add(new FilledFlowers3DRandomFlameGenerator());
+    allGenerators.add(new ExperimentalGnarlRandomFlameGenerator());
     allGenerators.add(new ExperimentalSimpleRandomFlameGenerator());
-    allGenerators.add(new DuckiesRandomFlameGenerator());
+    allGenerators.add(new FilledFlowers3DRandomFlameGenerator());
+    allGenerators.add(new Flowers3DRandomFlameGenerator());
+    allGenerators.add(new GnarlRandomFlameGenerator());
+    allGenerators.add(new Gnarl3DRandomFlameGenerator());
+    allGenerators.add(new JulianDiscRandomFlameGenerator());
+    allGenerators.add(new LayerzRandomFlameGenerator());
+    allGenerators.add(new LinearRandomFlameGenerator());
+    allGenerators.add(new MandelbrotRandomFlameGenerator());
+    allGenerators.add(new SimpleRandomFlameGenerator());
+    allGenerators.add(new SimpleTilingRandomFlameGenerator());
+    allGenerators.add(new SierpinskyRandomFlameGenerator());
+    allGenerators.add(new SphericalRandomFlameGenerator());
+    allGenerators.add(new Spherical3DRandomFlameGenerator());
+    allGenerators.add(new SplitsRandomFlameGenerator());
+    allGenerators.add(new SubFlameRandomFlameGenerator());
+    allGenerators.add(new SynthRandomFlameGenerator());
     allGenerators.add(new TentacleRandomFlameGenerator());
 
     simpleGenerators = new ArrayList<RandomFlameGenerator>();
