@@ -43,7 +43,7 @@ Lots of great plugins (variations) were created by lots of nice people. Unfortun
 <br>
 <ul>
 <li>julia3D and lots of others were created by Joel Faber
-<li>crackle, dc_perlin and hexes were created by Neil Slater
+<li>crackle, dc_perlin, hexes and synth were created by Neil Slater (slobo777)
 <li>phoenix_julia and Truchet were created by Chris J (TyrantWave)
 <li>Kaleidoscope and layered_spiral was created by Will Evans (eevans1)
 <li>GlynnSim1, GlynnSim2, GlynnSim3 and SphericalN were created by eralex61
